changed image for service deployments to suit digital ocean

--- a/infra/k8s/client-depl.yml
+++ b/infra/k8s/client-depl.yml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
         - name: client
-          image: us.gcr.io/ticketing-dev-395510/client
+          image: jeromegonzalvo/client
           env:
             - name: JWT_KEY
               valueFrom:
