--- a/infra/k8s-gke/auth-depl.yml
+++ b/infra/k8s-gke/auth-depl.yml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
         - name: auth
-          image: jeromegonzalvo/auth
+          image: us.gcr.io/ticketing-dev-395510/auth
           env:
             - name: MONGO_URI
               value: 'mongodb://auth-mongo-srv:27017/auth'
