--- a/infra/k8s-gke/expiration-depl.yml
+++ b/infra/k8s-gke/expiration-depl.yml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
         - name: expiration
-          image: jeromegonzalvo/expiration
+          image: us.gcr.io/ticketing-dev-395510/expiration
           env:
             - name: NATS_CLIENT_ID
               valueFrom:
