--- a/infra/k8s/tickets-depl.yml
+++ b/infra/k8s/tickets-depl.yml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
         - name: tickets
-          image: us.gcr.io/ticketing-dev-395510/tickets
+          image: jeromegonzalvo/tickets
           env:
             - name: NATS_CLIENT_ID
               valueFrom:
