--- a/skaffold.yml
+++ b/skaffold.yml
@@ -2,7 +2,7 @@ apiVersion: skaffold/v3
 kind: Config
 manifests:
   rawYaml:
-    - ./infra/k8s/*
+    - ./infra/k8s-gke/*
     - ./infra/k8s-dev/*
 build:
   googleCloudBuild:
