--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -1,8 +1,18 @@
-FROM node:alpine
-
+FROM node:alpine as BUILD_IMAGE
 WORKDIR /app
-COPY package.json .
-RUN npm install
+COPY package.json package-lock.json ./
+# install dependencies
+RUN npm ci
 COPY . .
+# build
+RUN npm run build
 
-CMD ["npm", "run", "dev"]
+FROM node:alpine
+WORKDIR /app
+# copy from build image
+COPY --from=BUILD_IMAGE /app/package.json ./package.json
+COPY --from=BUILD_IMAGE /app/node_modules ./node_modules
+COPY --from=BUILD_IMAGE /app/.next ./.next
+COPY --from=BUILD_IMAGE /app/public ./public
+EXPOSE 3000
+CMD ["npm", "start"]
