--- a/tickets/package.json
+++ b/tickets/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon src/index.ts",
+    "build": "tsc",
     "test": "jest --watchAll --no-cache",
     "test:ci": "jest"
   },
